调整菜单样式

--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -62,6 +62,9 @@
   margin-top: 4px !important;
   margin-bottom: 4px !important;
 }
+.ant-menu-dark, .ant-menu-dark .ant-menu-sub{
+  background-color: #191a23 !important;
+}
 
 // 图标样式
 .logo {
