调增菜单图标 / 过度动画

--- a/src/assets/css/animate.scss
+++ b/src/assets/css/animate.scss
@@ -6,10 +6,10 @@
 
 .fade-enter-from {
   opacity: 0;
-  transform: translateY(30px);
+  transform: translateX(-30px);
 }
 
 .fade-leave-to {
   opacity: 0;
-  transform: translateY(-30px);
+  transform: translateX(30px);
 }
