--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -59,6 +59,8 @@
     padding-right: 15px;
   }
 }
+
+// 通用布局
 #layout .ant-layout-header {
   padding-left: 0px;
   padding-right: 0px;
@@ -190,7 +192,7 @@
     margin-left: 3px;
     height: 34px !important;
     line-height: 34px !important;
-    border-radius: 3px;
+    border-radius: 3.5px;
     color: #808695;
     background-color: white !important;
   }
