菜单布局修改

--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -72,6 +72,7 @@
       line-height: 64px;
       padding-left: 30px;
       .menu-item{
+        color: unset;
         height: 64px;
         line-height: 64px;
         display: inline-block;
