--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -86,7 +86,7 @@
         font-size: 14.5px;
       }
       .is-active{
-        border-bottom: 3px solid #2d8cf0;
+        background-color: whitesmoke;
       }
     }
     background-color: white!important;
@@ -122,7 +122,7 @@
         font-size: 14.5px;
       }
       .is-active{
-        border-bottom: 3px solid #2d8cf0;
+        background-color: whitesmoke;
       }
     }
     background-color: white!important;
@@ -251,16 +251,16 @@
     color:#2d8cf0 !important
   }
   #tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
-    border-radius: 0px;
+    border-radius: 4px;
     border: none;
-    margin-right: 3px;
-    margin-left: 3px;
+    margin-right: 4px;
+    margin-left: 4px;
     height: 34px !important;
     line-height: 34px !important;
-    border-radius: 3.5px;
     color: #808695;
     background-color: white !important;
   }
+  
   #tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab:first-child {
     margin-left: 6px;
   }
