--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -296,10 +296,23 @@
   #header .prev-menu .menu-item,
   #header .next-menu .menu-item {
     font-size: 17px;
-    padding: 0 15px;
+    margin: 0 13px;
     cursor: pointer;
     transition: color 0.3s;
+    height: 65px;
+    line-height: 65px;
   }
+
+  #header .prev-menu .avatar-item,
+  #header .next-menu .avatar-item{
+    height: 65px;
+    line-height: 65px;
+    padding-top: 12px;
+    padding-bottom: 18px;
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
   #header .prev-menu .menu-item:hover,
   #header .next-menu .menu-item:hover {
     color: #2d8cf0;
@@ -342,6 +355,18 @@
   }
   #tab .ant-tabs-nav-container {
     height: 34px;
+  }
+
+  /** Fixed 头部样式 */
+  .fixedHeader{
+    #content{
+      height: 100%;
+    }
+  }
+  .fixedHeader.muiltTab{
+    #content{
+      height: calc(100% - 50px);
+    }
   }
 
   /** 主 题 选 择 界 面 样 式 */
