--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -302,7 +302,6 @@
     height: 65px;
     line-height: 65px;
   }
-
   #header .prev-menu .avatar-item,
   #header .next-menu .avatar-item{
     height: 65px;
@@ -312,10 +311,13 @@
     margin-left: 13px;
     margin-right: 13px;
   }
-
   #header .prev-menu .menu-item:hover,
   #header .next-menu .menu-item:hover {
     color: #2d8cf0;
+  }
+  #tab{
+    height: 45.5px;
+    line-height: 45.5px;
   }
   #tab .tab {
     width: calc(100% - 40px);
@@ -365,7 +367,7 @@
   }
   .fixedHeader.muiltTab{
     #content{
-      height: calc(100% - 50px);
+      height: calc(100% - 51px);
     }
   }
 
