--- a/src/assets/css/animate.scss
+++ b/src/assets/css/animate.scss
@@ -1,15 +1,15 @@
-/* 页面过度动画 */
-.fade-leave-active,
 .fade-enter-active {
-  transition: all .5s;
+  transition: all .90s;
 }
-
+.fade-leave-active{
+  transition: all .90s;
+}
 .fade-enter-from {
   opacity: 0;
-  transform: translateX(-30px);
+  transform: translateX(-35px);
 }
-
 .fade-leave-to {
   opacity: 0;
-  transform: translateX(30px);
+  transform: translateX(35px);
+  display: none;
 }
