--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -15,6 +15,9 @@
 #layout.layout-head.theme-dark{
   #logo{
     height: 64px;
+    img{
+      margin-top: -3.5px;
+    }
     border-bottom: 1px solid #101117;
     background: #191a23;
   }
@@ -214,6 +217,7 @@
   height: 48px !important;
   line-height: 48px !important;
 }
+
 .ant-layout-sider {
   background: #191a23 !important;
   &.fixed-side{
@@ -230,10 +234,6 @@
       overflow-y: scroll;
     }
   }
-}
-.ant-menu.ant-menu-dark .ant-menu-item-selected,
-.ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
-  background-color: #2d8cf0 !important;
 }
 .ant-menu-dark,
 .ant-menu-dark {
@@ -256,6 +256,7 @@
 .ant-menu-dark, .ant-menu-dark .ant-menu-sub{
   background-color: #191a23 !important;
 }
+
 .ant-menu-horizontal > .ant-menu-item, .ant-menu-horizontal > .ant-menu-submenu{
   border-bottom: none;
   top: 0px;
@@ -269,17 +270,21 @@
    text-align: center;
   }
   #logo img{
-    height: 59px;
-    width: 59px;
+    margin-top: 6px;
+    height: 54px;
   }
   #header {
+    height: 65px;
+    line-height: 65px;
     background-color: white;
   }
   #header .next-menu {
     float: right;
+    height: 65px;
   }
   #header .prev-menu{
     display: inline-block;
+    height: 65px;
   }
   #header .head-logo{
     width:250px;
@@ -288,19 +293,18 @@
   }
   #header .head-menu{
     .ant-menu{
-      height: 64px;
-      line-height: 64px;
+      height: 65px;
+      line-height: 65px;
     }
     display: inline-block;
   }
   #header .prev-menu .menu-item,
   #header .next-menu .menu-item {
-    font-size: 17px;
-    margin: 0 13px;
-    cursor: pointer;
-    transition: color 0.3s;
+    font-size: 15.8px;
+    padding: 0 13.5px;
     height: 65px;
     line-height: 65px;
+    display: inline-block;
   }
   #header .prev-menu .avatar-item,
   #header .next-menu .avatar-item{
@@ -313,7 +317,7 @@
   }
   #header .prev-menu .menu-item:hover,
   #header .next-menu .menu-item:hover {
-    color: #2d8cf0;
+    background-color: #f7f7f7;
   }
   #tab{
     height: 45.5px;
@@ -335,9 +339,6 @@
     margin-top: 6px !important;
     margin-bottom: 6px !important;
   }
-  #tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active{
-    color:#2d8cf0 !important
-  }
   #tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
     border-radius: 3px;
     border: none;
@@ -357,6 +358,21 @@
   }
   #tab .ant-tabs-nav-container {
     height: 34px;
+  }
+
+  #tab .ant-tabs-nav .ant-tabs-tab::before{
+    background-color: whitesmoke;
+    height: 8px;
+    width: 8px;
+    border-radius: 50px;
+    position: absolute;
+    margin-top: 14.5px;
+    margin-left: 13px;
+  }
+
+  #tab .ant-tabs-nav .ant-tabs-tab>div{
+    margin-left: 12px;
+    color:#808695;
   }
 
   /** Fixed 头部样式 */
@@ -394,13 +410,14 @@
   color: #666;
   border-radius: 4px;
 }
+
 .pearone-color .color-content li.layui-this:after,
 .pearone-color .color-content li:hover:after {
 	width: 81px;
 	height: 63px;
 	top: -6px;
-	left: -5px;
-	border: #5FB878 2px solid;
+  left: -5px;
+	border: #1890ff 2.3px solid;
 	opacity: 1;
 	border-radius: 4px;
 }
@@ -430,13 +447,14 @@
 }
 .select-color .select-color-content .select-color-item {
 	background-color: gray;
-	width: 30px;
-	height: 30px;
+	width: 25px;
+	height: 25px;
 	border-radius: 3px;
 	float: left;
 	margin-left: 20px;
 	color: white;
-	font-size: 18px;
+  font-size: 13px;
+  line-height: 25px;
 	text-align: center;
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);
 	line-height: 30px;
