调整主题选择

--- a/src/assets/css/theme/theme-blue.scss
+++ b/src/assets/css/theme/theme-blue.scss
@@ -5,7 +5,7 @@
 }
 /** 选项卡选中色 */
 .theme-blue #tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active::before{
-    background-color:#2d8cf0 !important
+    background-color:#2d8cf0 !important;
 }
 /** 主题选中颜色 */
 .theme-blue .pearone-color .color-content li.layui-this:after,
