--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -22,6 +22,9 @@
     background: #191a23;
   }
   #header{
+    .next-menu .menu-item:hover{
+      background-color: black!important;
+    }
     padding-left: 0px;
     padding-right: 15px;
     background-color:#191a23;
@@ -314,6 +317,7 @@
     padding-bottom: 18px;
     margin-left: 13px;
     margin-right: 13px;
+    display: inline-block;
   }
   #header .prev-menu .menu-item:hover,
   #header .next-menu .menu-item:hover {
@@ -408,7 +412,7 @@
 	cursor: pointer;
 	font-size: 12px;
   color: #666;
-  border-radius: 4px;
+  border-radius: 9px;
 }
 
 .pearone-color .color-content li.layui-this:after,
@@ -419,7 +423,7 @@
   left: -5px;
 	border: #1890ff 2.3px solid;
 	opacity: 1;
-	border-radius: 4px;
+	border-radius: 9px;
 }
 .pearone-color .color-content li:after {
 	content: '';
