--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -298,10 +298,11 @@
   }
   #logo .title{
     display: inline-block;
-    color: white;
-    font-size: 24px;
-    height: 45px;
-    margin-top: 10px;
+    color: #5FB878 !important;
+    font-size: 16px;
+    height: 64px;
+    font-weight: 500;
+    line-height: 64px;
   }
   #header {
     height: 65px;
