--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -299,10 +299,11 @@
   #logo .title{
     display: inline-block;
     color: #5FB878 !important;
-    font-size: 16px;
-    height: 64px;
+    font-size: 22px;
+    margin-top: 2px;
+    height: 55px;
     font-weight: 500;
-    line-height: 64px;
+    line-height: 55px;
   }
   #header {
     height: 65px;
