--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -2,3 +2,4 @@
 @import './animate.scss';
 @import './theme/theme-blue.scss';
 @import './theme/theme-green.scss';
+@import './theme/theme-yellow.scss';
