--- a/src/assets/css/theme/theme-blue.scss
+++ b/src/assets/css/theme/theme-blue.scss
@@ -40,3 +40,7 @@
 .theme-blue  .ant-radio-checked .ant-radio-inner{
     border-color: #1890ff!important;
 }
+
+.theme-blue #logo .title{
+    color: #1890ff !important;
+  }
