--- a/src/assets/css/theme/theme-green.scss
+++ b/src/assets/css/theme/theme-green.scss
@@ -62,3 +62,13 @@
     color: white!important;
     background-color: #5FB878!important;
 }
+
+.theme-green #logo .title{
+    display: inline-block;
+    color: #5FB878 !important;
+    font-size: 23px;
+    margin-top: 2px;
+    height: 60px;
+    font-weight: 600;
+    line-height: 53px;
+  }
