提交部分代码

--- a/public/theme.less
+++ b/public/theme.less
@@ -10,16 +10,18 @@
 #logo .title{
     color:@primary-color!important;
 }
-
 // 选项卡
 #tab .ant-tabs-tab-active::before{
     background-color:@primary-color!important;
 }
-
 // 主题选中
 .pearone-color .color-content li.layui-this:after,
 .pearone-color .color-content li:hover:after {
 	border:@primary-color 2.3px solid;
+}
+// 进度条
+.ant-progress-success-bg, .ant-progress-bg{
+    background-color:@primary-color!important;
 }
 
 html {-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
