整理部分代码

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -2,8 +2,11 @@
 
 /** 卡 片 美 化 */
 .ant-card{
-    border-radius: 6px!important;
+    border-radius: 5px!important;
 }
 .ant-card-bordered{
     border: none!important;
+}
+.ant-divider{
+    background-color: whitesmoke!important;
 }
