主题配置 --> 卡片样式 --> 选择切换

--- a/src/assets/css/tabs.less
+++ b/src/assets/css/tabs.less
@@ -7,6 +7,21 @@
     width: calc(~"(100% - 40px)");
     display: inline-block;
 }
+
+.pear-dot-tab .ant-tabs-tab-prev{
+    border-right: 1px solid whitesmoke;
+    height: 34px!important;
+    line-height: 34px!important;
+    text-align: center;
+}
+
+.pear-dot-tab .ant-tabs-tab-next{
+    border-left: 1px solid whitesmoke;
+    height: 34px!important;
+    line-height: 34px!important;
+    text-align: center;
+}
+
 .pear-dot-tab .tab-tool {
     float: right;
     top: 6px;
@@ -126,5 +141,71 @@
 }
 .pear-card-tab .ant-tabs-nav .ant-tabs-tab>div{
     margin-left: 13.5px;
+    color:#808695;
+}
+
+// 样 式
+.pear-label-tab{
+    height: 45.5px;
+    line-height: 45.5px;
+}
+.pear-label-tab .tab {
+    width: calc(~"(100% - 40px)");
+    display: inline-block;
+}
+
+.pear-label-tab .ant-tabs-tab-prev{
+    border-right: 1px solid whitesmoke;
+    height: 34px!important;
+    line-height: 34px!important;
+    text-align: center;
+}
+
+.pear-label-tab .ant-tabs-tab-next{
+    border-left: 1px solid whitesmoke;
+    height: 34px!important;
+    line-height: 34px!important;
+    text-align: center;
+}
+
+.pear-label-tab .tab-tool {
+    float: right;
+    top: 6px;
+    right: 6px;
+    border: none;
+}
+.pear-label-tab .ant-tabs-bar {
+    margin: 0px !important;
+    border: none;
+    margin-top: 6px !important;
+    margin-bottom: 6px !important;
+}
+.pear-label-tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
+    border-radius: 3px;
+    border: none;
+    margin-right: 4px;
+    margin-left: 4px;
+    height: 34px !important;
+    line-height: 34px !important;
+    color: #808695;
+    background-color: white;
+}
+
+.pear-label-tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab:first-child {
+    margin-left: 6px;
+}
+.pear-label-tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab:last-child {
+    margin-right: 6px;
+}
+.pear-label-tab .ant-tabs-nav-container {
+    height: 34px;
+}
+.pear-label-tab .ant-tabs-nav .ant-tabs-tab::before{
+    display: none;
+}
+.pear-label-tab .ant-tabs-nav::before{
+    background-color: red!important;
+}
+.pear-label-tab .ant-tabs-nav .ant-tabs-tab>div{
     color:#808695;
 }
