--- a/public/theme.less
+++ b/public/theme.less
@@ -19,6 +19,12 @@
 #tab .ant-tabs-tab-active::before{
     background-color:@primary-color!important;
 }
+.pear-label-tab .ant-tabs-tab-active{
+    background-color: @primary-color!important;
+}
+.pear-label-tab .ant-tabs-tab-active *{
+    color:white!important;
+}
 // 主题选中
 .pearone-color .color-content li.layui-this:after,
 .pearone-color .color-content li:hover:after {
