--- a/src/assets/css/tabs.less
+++ b/src/assets/css/tabs.less
@@ -1,4 +1,4 @@
-// 样 式
+// Tab 点样式
 .pear-dot-tab{
     height: 45.5px;
     line-height: 45.5px;
@@ -7,14 +7,12 @@
     width: calc(~"(100% - 40px)");
     display: inline-block;
 }
-
 .pear-dot-tab .ant-tabs-tab-prev{
     border-right: 1px solid whitesmoke;
     height: 34px!important;
     line-height: 34px!important;
     text-align: center;
 }
-
 .pear-dot-tab .ant-tabs-tab-next{
     border-left: 1px solid whitesmoke;
     height: 34px!important;
@@ -44,7 +42,6 @@
     color: #808695;
     background-color: white;
 }
-
 .pear-dot-tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab:first-child {
     margin-left: 6px;
 }
@@ -67,9 +64,7 @@
     margin-left: 13.5px;
     color:#808695;
 }
-
-// 卡片样式
-
+// tab 卡片样式
 .pear-card-tab{
     height: 40.5px;
     line-height: 40.5px;
@@ -78,17 +73,14 @@
     border-top: 1px solid whitesmoke;
     border-bottom: 1px solid whitesmoke;
 }
-
 .pear-card-tab .tab {
     width: calc(~"(100% - 40px)");
     display: inline-block;
 }
-
 .pear-card-tab .ant-tabs-nav-container-scrolling {
     padding-left: 40px;
     padding-right: 40px;
 }
-
 .pear-card-tab .ant-tabs-tab-prev{
     border-right: 1px solid whitesmoke;
     width: 40px!important;
@@ -96,7 +88,6 @@
     line-height: 39px!important;
     text-align: center;
 }
-
 .pear-card-tab .ant-tabs-tab-next{
     border-left: 1px solid whitesmoke;
     width: 40px!important;
@@ -104,7 +95,6 @@
     line-height: 39px!important;
     text-align: center;
 }
-
 .pear-card-tab .tab-tool {
     float: right;
     border: none!important;
@@ -144,7 +134,7 @@
     color:#808695;
 }
 
-// 样 式
+// tab 标 签 样 式
 .pear-label-tab{
     height: 45.5px;
     line-height: 45.5px;
@@ -153,21 +143,18 @@
     width: calc(~"(100% - 40px)");
     display: inline-block;
 }
-
 .pear-label-tab .ant-tabs-tab-prev{
     border-right: 1px solid whitesmoke;
     height: 34px!important;
     line-height: 34px!important;
     text-align: center;
 }
-
 .pear-label-tab .ant-tabs-tab-next{
     border-left: 1px solid whitesmoke;
     height: 34px!important;
     line-height: 34px!important;
     text-align: center;
 }
-
 .pear-label-tab .tab-tool {
     float: right;
     top: 6px;
@@ -190,7 +177,6 @@
     color: #808695;
     background-color: white;
 }
-
 .pear-label-tab .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab:first-child {
     margin-left: 6px;
 }
@@ -202,9 +188,6 @@
 }
 .pear-label-tab .ant-tabs-nav .ant-tabs-tab::before{
     display: none;
-}
-.pear-label-tab .ant-tabs-nav::before{
-    background-color: red!important;
 }
 .pear-label-tab .ant-tabs-nav .ant-tabs-tab>div{
     color:#808695;
