--- a/src/assets/css/animate.less
+++ b/src/assets/css/animate.less
@@ -1,16 +1,35 @@
 /** 路 由 动 画 */
-.fade-enter-active {
+
+// 动画一
+.fade-right-enter-active {
   transition: all .90s;
 }
-.fade-leave-active{
+.fade-right-leave-active{
   transition: all .90s;
 }
-.fade-enter-from {
+.fade-right-enter-from {
   opacity: 0;
   transform: translateX(-35px);
 }
-.fade-leave-to {
+.fade-right-leave-to {
   opacity: 0;
   transform: translateX(35px);
+  display: none;
+}
+
+// 动画二
+.fade-top-enter-active {
+  transition: all .90s;
+}
+.fade-top-leave-active{
+  transition: all .90s;
+}
+.fade-top-enter-from {
+  opacity: 0;
+  transform: translateY(35px);
+}
+.fade-top-leave-to {
+  opacity: 0;
+  transform: translateY(-35px);
   display: none;
 }
