--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -148,6 +148,10 @@
   z-index: 100;
 }
 
+#layout .ant-layout-content{
+  z-index: 200;
+}
+
 // 菜单样式
 .ant-menu-sub.ant-menu-inline > .ant-menu-item,
 .ant-menu-sub.ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title {
