--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -268,6 +268,9 @@
   line-height: 64px;
   display: inline-block;
 }
+.header-dropdown{
+  width: 150px!important;
+}
 #header .prev-menu .avatar-item,
 #header .next-menu .avatar-item{
   margin-left: 13px;
