--- a/src/assets/css/tabs.less
+++ b/src/assets/css/tabs.less
@@ -77,7 +77,7 @@
     width: calc(~"(100% - 40px)");
     display: inline-block;
 }
-.pear-card-tab .ant-tabs-nav-container-scrolling {
+.pear-card-tab .ant-tabs-nav-container {
     padding-left: 40px;
     padding-right: 40px;
 }
@@ -87,6 +87,9 @@
     height: 40px!important;
     line-height: 39px!important;
     text-align: center;
+    opacity: 1;
+    pointer-events: auto;
+    color: rgba(0, 0, 0, 0.65);
 }
 .pear-card-tab .ant-tabs-tab-next{
     border-left: 1px solid whitesmoke;
@@ -94,6 +97,9 @@
     height: 40px!important;
     line-height: 39px!important;
     text-align: center;
+    opacity: 1;
+    pointer-events: auto;
+    color: rgba(0, 0, 0, 0.65);
 }
 .pear-card-tab .tab-tool {
     float: right;
