夜间模式 tab 适应问题, windows 下菜单栏滚动条临时处理

--- a/src/assets/css/night.less
+++ b/src/assets/css/night.less
@@ -53,19 +53,40 @@
         color: white!important;
       }
       .tab-tool{
-        border: solid 1px #191a23!important;
+        border: solid 1px black!important;
         background: #191a23!important;
         color: white!important;
+      }
+      .ant-tabs-nav .ant-tabs-tab::before{
+        background-color: gray;
       }
       .ant-statistic-title{
         color: white!important;
       }
       .ant-tabs-tab{
         color: white!important;
-        background-color:  #191a23!important;
+        background-color:  #191a23;
+        border-right: 1px solid #191a23;
+        border-left: 1px solid #191a23;
+      }
+      .pear-card-tab{
+        border: black 1px solid;
+        background-color: #191a23!important;
+      }
+      .ant-tabs-tab-next{
+        color: white;
+        border-left: 1px solid black;
+      }
+      .ant-tabs-tab-prev{
+        color: white;
+        border-right: 1px solid black;
       }
       .ant-progress-inner{
         background-color: black;
+        border-right: 1px solid black;
+      }
+      .tab-tool{
+        border-left: 1px solid black;
       }
       .ant-progress-text{
         color: white!important;
