--- a/public/theme.less
+++ b/public/theme.less
@@ -24,7 +24,7 @@
 .pear-label-tab .ant-tabs-tab-active *{
     color:white!important;
 }
-// 主题选中
+// 主题
 .pearone-color .color-content li.layui-this:after,
 .pearone-color .color-content li:hover:after {
 	border:@primary-color 2.4px solid;
