--- a/public/theme.less
+++ b/public/theme.less
@@ -6,6 +6,12 @@
 @btn-primary-bg: #36b368;
 @layout-header-background: #001529;
 
+
+// 修复 input 样式
+.ant-input:focus{
+    border-color: @primary-color!important;
+    box-shadow: 0 0 0 3px  color(~`colorPalette("@{primary-color}", 0.5)`)!important;
+}
 // 登录标题
 .login-form .title{
     color:@primary-color!important;
