通知 / 公告 / 私信 / 任务

--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -262,8 +262,16 @@
   line-height: 64px;
   display: inline-block;
 }
-.header-dropdown{
-  width: 150px!important;
+.avatar-dropdown{
+  width: 160px!important;
+}
+.notice-dropdown{
+  .ant-tabs{
+    margin: 10px;
+  }
+  width: 368px!important;
+  height: 300px;
+  margin: 10px;
 }
 #header .prev-menu .avatar-item,
 #header .next-menu .avatar-item{
@@ -279,6 +287,19 @@
   img{
     border-radius: 100px;
   }
+}
+#header .prev-menu .notice-item,
+#header .next-menu .notice-item{
+  margin-left: 13px;
+  margin-right: 13px;
+  height: 60px;
+  width: 40px;
+  padding-top: 13px;
+  padding-bottom: 15px;
+  padding-right: 5px;
+  padding-left: 5px;
+  font-size: 16px;
+  display: inline-block;
 }
 #header .prev-menu .menu-item:hover,
 #header .next-menu .menu-item:hover {
