--- a/src/assets/css/module/layout.less
+++ b/src/assets/css/module/layout.less
@@ -2,88 +2,88 @@
 #layout {
   height: 100%;
 }
-#layout.layout-head.theme-light{
-  #logo{
+#layout.layout-head.theme-light {
+  #logo {
     height: 64px;
     border-bottom: 1px solid whitesmoke;
-    background:white;
+    background: white;
   }
-  #header{
+  #header {
     padding-left: 0px;
     padding-right: 15px;
   }
 }
-#layout.layout-head.theme-dark{
-  #logo{
+#layout.layout-head.theme-dark {
+  #logo {
     height: 64px;
-    img{
+    img {
       margin-top: -3.5px;
     }
     border-bottom: 1px solid #101117;
     background: #191a23;
   }
-  #header{
-    .next-menu .menu-item:hover{
-      background-color: black!important;
+  #header {
+    .next-menu .menu-item:hover {
+      background-color: black !important;
     }
     padding-left: 0px;
     padding-right: 15px;
-    background-color:#191a23;
+    background-color: #191a23;
     color: white;
   }
-  .ant-layout-header{
-    background-color:#191a23;
+  .ant-layout-header {
+    background-color: #191a23;
     box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
   }
 }
-#layout.theme-dark.layout-side{
-  #logo{
+#layout.theme-dark.layout-side {
+  #logo {
     height: 64px;
     border-bottom: 1px solid #101117;
     background: #191a23;
   }
-  #header{
+  #header {
     padding-left: 15px;
     padding-right: 15px;
   }
-  .ant-layout-sider{
+  .ant-layout-sider {
     box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
-    z-index: 999;
+    // z-index: 999;
   }
 }
-#layout.theme-light.layout-side{
-  #logo{
+#layout.theme-light.layout-side {
+  #logo {
     height: 64px;
     border-bottom: 1px solid whitesmoke;
-    background:white;
+    background: white;
   }
-  #header{
+  #header {
     padding-left: 15px;
     padding-right: 15px;
   }
-  .ant-layout-sider{
-    box-shadow: 2px 0 8px 0 rgba(29,35,41,.05)!important;
-    background-color: white!important;
+  .ant-layout-sider {
+    box-shadow: 2px 0 8px 0 rgba(29, 35, 41, 0.05) !important;
+    background-color: white !important;
     z-index: 999;
   }
 }
-#layout.theme-dark.layout-comp{
-  #logo{
+#layout.theme-dark.layout-comp {
+  #logo {
     height: 64px;
     border-bottom: 1px solid #101117;
     background: #191a23;
   }
-  #header{
+  #header {
     padding-left: 15px;
     padding-right: 15px;
   }
-  .ant-layout-header{
-    .comp-menu{
+  .ant-layout-header {
+    .comp-menu {
       display: inline-block;
       height: 64px;
       line-height: 64px;
       padding-left: 30px;
-      .menu-item{
+      .menu-item {
         color: unset;
         height: 64px;
         line-height: 64px;
@@ -92,35 +92,34 @@
         padding-right: 15px;
         font-size: 14.5px;
       }
-      .is-active{
+      .is-active {
         background-color: whitesmoke;
       }
     }
-    background-color: white!important;
-
+    background-color: white !important;
   }
-  .ant-layout-sider{
+  .ant-layout-sider {
     box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
     z-index: 999;
   }
 }
-#layout.theme-light.layout-comp{
-  #logo{
+#layout.theme-light.layout-comp {
+  #logo {
     height: 64px;
     border-bottom: 1px solid whitesmoke;
-    background:white;
+    background: white;
   }
-  #header{
+  #header {
     padding-left: 15px;
     padding-right: 15px;
   }
-  .ant-layout-header{
-    .comp-menu{
+  .ant-layout-header {
+    .comp-menu {
       display: inline-block;
       height: 64px;
       line-height: 64px;
       padding-left: 30px;
-      .menu-item{
+      .menu-item {
         height: 64px;
         line-height: 64px;
         display: inline-block;
@@ -128,16 +127,16 @@
         padding-right: 15px;
         font-size: 14.5px;
       }
-      .is-active{
+      .is-active {
         background-color: whitesmoke;
       }
     }
-    background-color: white!important;
+    background-color: white !important;
   }
-  .ant-layout-sider{
-    box-shadow: 2px 0 8px 0 rgba(29,35,41,.05)!important;
+  .ant-layout-sider {
+    box-shadow: 2px 0 8px 0 rgba(29, 35, 41, 0.05) !important;
     z-index: 999;
-    background-color: white!important;
+    background-color: white !important;
   }
 }
 #layout .ant-layout-header {
@@ -146,7 +145,7 @@
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   z-index: 100;
 }
-#layout .ant-layout-content{
+#layout .ant-layout-content {
   z-index: 200;
 }
 // 菜单样式
@@ -168,11 +167,11 @@
 }
 .ant-layout-sider {
   background: #191a23 !important;
-  &.fixed-side{
+  &.fixed-side {
     height: 100vh;
     position: relative;
     overflow: hidden !important;
-    &>.ant-layout-sider-children>div{
+    & > .ant-layout-sider-children > div {
       position: absolute;
       left: 0;
       top: 0;
@@ -201,54 +200,57 @@
   margin-top: 4px !important;
   margin-bottom: 4px !important;
 }
-.ant-menu-dark, .ant-menu-dark .ant-menu-sub{
+.ant-menu-dark,
+.ant-menu-dark .ant-menu-sub {
   background-color: #191a23 !important;
 }
-.ant-menu-horizontal > .ant-menu-item, .ant-menu-horizontal > .ant-menu-submenu{
+.ant-menu-horizontal > .ant-menu-item,
+.ant-menu-horizontal > .ant-menu-submenu {
   border-bottom: none;
   top: 0px;
 }
-.ant-menu-horizontal > .ant-menu-item, .ant-menu-horizontal > .ant-menu-submenu:hover{
+.ant-menu-horizontal > .ant-menu-item,
+.ant-menu-horizontal > .ant-menu-submenu:hover {
   border-bottom: none;
   top: 0px;
 }
 // 图标 顶部 样式
 #logo {
-   text-align: center;
+  text-align: center;
 }
-#logo .image{
-   margin-top: 11px;
-   height: 38px;
+#logo .image {
+  margin-top: 11px;
+  height: 38px;
 }
-#logo .title{
-   display: inline-block;
-   color: #1890ff !important;
-   font-size: 23px;
-   margin-top: 2px;
-   height: 60px;
-   font-weight: 700;
-   line-height: 53px;
+#logo .title {
+  display: inline-block;
+  color: #1890ff !important;
+  font-size: 23px;
+  margin-top: 2px;
+  height: 60px;
+  font-weight: 700;
+  line-height: 53px;
 }
 #header {
-   height: 65px;
-   line-height: 65px;
-   background-color: white;
+  height: 65px;
+  line-height: 65px;
+  background-color: white;
 }
 #header .next-menu {
-   float: right;
-   height: 65px;
+  float: right;
+  height: 65px;
 }
-#header .prev-menu{
-   display: inline-block;
-   height: 65px;
+#header .prev-menu {
+  display: inline-block;
+  height: 65px;
 }
-#header .head-logo{
-   width:250px;
-   height: 64px;
-   display: inline-block;
+#header .head-logo {
+  width: 250px;
+  height: 64px;
+  display: inline-block;
 }
-#header .head-menu{
-  .ant-menu{
+#header .head-menu {
+  .ant-menu {
     height: 65px;
     line-height: 65px;
   }
@@ -262,19 +264,19 @@
   line-height: 64px;
   display: inline-block;
 }
-.avatar-dropdown{
-  width: 160px!important;
+.avatar-dropdown {
+  width: 160px !important;
 }
-.notice-dropdown{
-  .ant-tabs{
+.notice-dropdown {
+  .ant-tabs {
     margin: 10px;
   }
-  width: 368px!important;
+  width: 368px !important;
   height: 300px;
   margin: 10px;
 }
 #header .prev-menu .avatar-item,
-#header .next-menu .avatar-item{
+#header .next-menu .avatar-item {
   margin-left: 13px;
   margin-right: 13px;
   height: 60px;
@@ -284,12 +286,12 @@
   padding-right: 5px;
   padding-left: 5px;
   display: inline-block;
-  img{
+  img {
     border-radius: 100px;
   }
 }
 #header .prev-menu .notice-item,
-#header .next-menu .notice-item{
+#header .next-menu .notice-item {
   margin-left: 13px;
   margin-right: 13px;
   height: 60px;
@@ -305,84 +307,87 @@
   background-color: #f7f7f7;
 }
 /** 头 部 固 定 样 式 */
-.fixedHeader{
-  #content{
+.fixedHeader {
+  #content {
     height: 100%;
   }
 }
-.fixedHeader.muiltTab{
-  #content{
+.fixedHeader.muiltTab {
+  #content {
     height: calc(~"(100% - 51px)");
   }
 }
 /** 主 题 配 置 样 式 */
-.pearone-color .color-title {padding: 15px 0 0px 20px;margin-bottom: 4px;}
+.pearone-color .color-title {
+  padding: 15px 0 0px 20px;
+  margin-bottom: 4px;
+}
 .pearone-color .color-content {
-	padding: 15px 10px 0 20px;
+  padding: 15px 10px 0 20px;
 }
 .pearone-color .color-content ul {
-	list-style: none;
-	padding: 0px;
+  list-style: none;
+  padding: 0px;
 }
 .pearone-color .color-content ul li {
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	width: 70px;
-	height: 50px;
-	margin: 0 20px 20px 0;
-	padding: 2px 2px 2px 2px;
-	background-color: #f2f2f2;
-	cursor: pointer;
-	font-size: 12px;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  width: 70px;
+  height: 50px;
+  margin: 0 20px 20px 0;
+  padding: 2px 2px 2px 2px;
+  background-color: #f2f2f2;
+  cursor: pointer;
+  font-size: 12px;
   color: #666;
   border-radius: 6px;
 }
 .pearone-color .color-content li.layui-this:after,
 .pearone-color .color-content li:hover:after {
-	width: 81px;
-	height: 63px;
-	top: -6px;
+  width: 81px;
+  height: 63px;
+  top: -6px;
   left: -5px;
-	border: #1890ff 2.2px solid;
-	opacity: 1;
-	border-radius: 6px;
+  border: #1890ff 2.2px solid;
+  opacity: 1;
+  border-radius: 6px;
 }
 .pearone-color .color-content li:after {
-	content: '';
-	position: absolute;
-	z-index: 20;
-	top: 50%;
-	left: 50%;
-	width: 1px;
-	height: 0;
-	border: 1px solid #F2F2F2;
-	transition: all .3s;
-	-webkit-transition: all .3s;
-	opacity: 0;
+  content: "";
+  position: absolute;
+  z-index: 20;
+  top: 50%;
+  left: 50%;
+  width: 1px;
+  height: 0;
+  border: 1px solid #f2f2f2;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  opacity: 0;
 }
 .select-color {
-	margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 .select-color .select-color-title {
-	padding: 10px 0 0px 20px;
-	margin-bottom: 4px;
+  padding: 10px 0 0px 20px;
+  margin-bottom: 4px;
 }
 .select-color .select-color-content {
-	padding: 20px 0 0px 0px;
-	margin-bottom: 4px;
+  padding: 20px 0 0px 0px;
+  margin-bottom: 4px;
 }
 .select-color .select-color-content .select-color-item {
-	background-color: gray;
-	width: 25px;
-	height: 25px;
-	border-radius: 3px;
-	float: left;
-	margin-left: 20px;
-	color: white;
+  background-color: gray;
+  width: 25px;
+  height: 25px;
+  border-radius: 3px;
+  float: left;
+  margin-left: 20px;
+  color: white;
   font-size: 13px;
   line-height: 25px;
-	text-align: center;
-	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);
-	line-height: 30px;
+  text-align: center;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
+  line-height: 30px;
 }
