细微主题调整

--- a/src/assets/css/module/layout.less
+++ b/src/assets/css/module/layout.less
@@ -48,7 +48,7 @@
   }
   .ant-layout-sider {
     box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
-    // z-index: 999;
+    z-index: 999;
   }
 }
 #layout.theme-light.layout-side {
