修复 muiltTab 模式下 Header 阴影

--- a/src/assets/css/module/layout.less
+++ b/src/assets/css/module/layout.less
@@ -33,7 +33,6 @@
   }
   .ant-layout-header {
     background-color: #191a23;
-    box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
   }
 }
 #layout.theme-dark.layout-side {
@@ -310,6 +309,7 @@
   }
 }
 .fixedHeader.muiltTab {
+  z-index: 998;
   #content {
     height: calc(~"(100% - 51px)");
     -ms-overflow-style: none;
