--- a/src/assets/css/module/layout.less
+++ b/src/assets/css/module/layout.less
@@ -14,7 +14,7 @@
 }
 #layout.layout-head.theme-dark {
   #logo {
-    height: 64px;
+    height: 60px;
     img {
       margin-top: -3.5px;
     }
@@ -36,7 +36,7 @@
 }
 #layout.theme-dark.layout-side {
   #logo {
-    height: 64px;
+    height: 60px;
     border-bottom: 1px solid #101117;
     background: #191a23;
   }
@@ -51,7 +51,7 @@
 }
 #layout.theme-light.layout-side {
   #logo {
-    height: 64px;
+    height: 60px;
     border-bottom: 1px solid whitesmoke;
     background: white;
   }
@@ -67,7 +67,7 @@
 }
 #layout.theme-dark.layout-comp {
   #logo {
-    height: 64px;
+    height: 60px;
     border-bottom: 1px solid #101117;
     background: #191a23;
   }
@@ -103,7 +103,7 @@
 }
 #layout.theme-light.layout-comp {
   #logo {
-    height: 64px;
+    height: 60px;
     border-bottom: 1px solid whitesmoke;
     background: white;
   }
@@ -114,8 +114,8 @@
   .ant-layout-header {
     .comp-menu {
       display: inline-block;
-      height: 64px;
-      line-height: 64px;
+      height: 60px;
+      line-height: 60px;
       padding-left: 30px;
       .menu-item {
         height: 64px;
@@ -211,27 +211,27 @@
   line-height: 53px;
 }
 #header {
-  height: 65px;
-  line-height: 65px;
+  height: 60px;
+  line-height: 60px;
   background-color: white;
 }
 #header .next-menu {
   float: right;
-  height: 65px;
+  height: 60px;
 }
 #header .prev-menu {
   display: inline-block;
-  height: 65px;
+  height: 60px;
 }
 #header .head-logo {
   width: 250px;
-  height: 64px;
+  height: 60px;
   display: inline-block;
 }
 #header .head-menu {
   .ant-menu {
-    height: 65px;
-    line-height: 65px;
+    height: 60px;
+    line-height: 60px;
   }
   display: inline-block;
 }
@@ -239,8 +239,8 @@
 #header .next-menu .menu-item {
   font-size: 15.8px;
   padding: 0 13.5px;
-  height: 64px;
-  line-height: 64px;
+  height: 60px;
+  line-height: 60px;
   display: inline-block;
 }
 .avatar-dropdown {
@@ -376,4 +376,8 @@
   text-align: center;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
   line-height: 30px;
+}
+.ant-layout-header{
+  height: 60px !important;
+  line-height: 60px !important;
 }
