edit tab prev / next background-color

--- a/src/assets/css/module/animate.less
+++ b/src/assets/css/module/animate.less
@@ -33,3 +33,20 @@
   transform: translateY(-35px);
   display: none;
 }
+
+// 动画二
+.fade-left-enter-active {
+  transition: all .90s;
+}
+.fade-left-leave-active{
+  transition: all .90s;
+}
+.fade-left-enter-from {
+  opacity: 0;
+  transform: translateY(100%);
+}
+.fade-left-leave-to {
+  opacity: 0;
+  transform: translateY(-100%);
+  display: none;
+}
