--- a/src/assets/css/module/theme.less
+++ b/src/assets/css/module/theme.less
@@ -106,13 +106,15 @@
   display: inline-block;
 }
 .pear-dot-tab .ant-tabs-tab-prev {
-  border-right: 1px solid whitesmoke;
+  border-right: 1px solid #f0f2f5;
+  background-color: #f0f2f5;
   height: 34px !important;
   line-height: 34px !important;
   text-align: center;
 }
 .pear-dot-tab .ant-tabs-tab-next {
-  border-left: 1px solid whitesmoke;
+  border-left: 1px solid #f0f2f5;
+  background-color: #f0f2f5;
   height: 34px !important;
   line-height: 34px !important;
   text-align: center;
