顶部菜单调整

--- a/src/assets/css/module/layout.less
+++ b/src/assets/css/module/layout.less
@@ -3,7 +3,7 @@
 }
 #layout.layout-head.theme-light {
   #logo {
-    height: 64px;
+    height: 60px;
     border-bottom: 1px solid whitesmoke;
     background: white;
   }
@@ -118,8 +118,8 @@
       line-height: 60px;
       padding-left: 30px;
       .menu-item {
-        height: 64px;
-        line-height: 64px;
+        height:60px;
+        line-height: 60px;
         display: inline-block;
         padding-left: 15px;
         padding-right: 15px;
@@ -229,9 +229,10 @@
   display: inline-block;
 }
 #header .head-menu {
+  position: absolute;
   .ant-menu {
-    height: 55px;
-    line-height: 55px;
+    height: 60px;
+    line-height: 60px;
   }
   display: inline-block;
 }
