fix header avatar locale and notice downdown top

--- a/src/assets/css/module/layout.less
+++ b/src/assets/css/module/layout.less
@@ -255,6 +255,14 @@
   height: 300px;
   margin: 10px;
 }
+#header .prev-menu .locale-item,
+#header .next-menu .locale-item {
+  font-size: 15.8px;
+  padding: 0 13.5px;
+  height: 60px;
+  line-height: 60px;
+  display: inline-block;
+}
 #header .prev-menu .avatar-item,
 #header .next-menu .avatar-item {
   margin-left: 13px;
@@ -275,13 +283,14 @@
   margin-left: 13px;
   margin-right: 13px;
   height: 60px;
-  padding-top: 13px;
+  padding-top: 18px;
   padding-bottom: 15px;
   padding-right: 5px;
   padding-left: 5px;
   font-size: 16px;
   display: inline-block;
 }
+
 #header .prev-menu .menu-item:hover,
 #header .next-menu .menu-item:hover {
   background-color: #f7f7f7;
