Organize the code

--- a/src/assets/css/module/layout.less
+++ b/src/assets/css/module/layout.less
@@ -295,7 +295,7 @@
 #header .next-menu .menu-item:hover {
   background-color: #f7f7f7;
 }
-/** 头 部 固 定 样 式 */
+/** 固定样式 */
 .fixedHeader {
   #content {
     height: 100%;
@@ -313,7 +313,7 @@
     width: 0 !important;
   }
 }
-/** 主 题 配 置 样 式 */
+/** 主题配置 */
 .pearone-color .color-title {
   padding: 15px 0 0px 20px;
   margin-bottom: 4px;
