--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,3 +1,3 @@
-@import './module/animate.less';
-@import './module/layout.less';
+@import './module/anima.less';
 @import './module/theme.less';
+@import './module/layout.less';
